files are updated on 17-04-18 5-40pm

--- a/chat.html
+++ b/chat.html
@@ -323,7 +323,7 @@
                       <div class="col-md-12 col-lg-12">
                         <div class="page-view">
                           <div class="form-title">
-                            Deep Employee Report
+                            Secure Messaging
                           </div>
 
 
@@ -333,23 +333,6 @@
 			<div class="wrap">
 				<img id="profile-img" src="assets/img/user.png" class="online" alt="" />
 				<p>Admin</p>
-				<i class="fa fa-chevron-down expand-button" aria-hidden="true"></i>
-				<div id="status-options">
-					<ul>
-						<li id="status-online" class="active"><span class="status-circle"></span> <p>Online</p></li>
-						<li id="status-away"><span class="status-circle"></span> <p>Away</p></li>
-						<li id="status-busy"><span class="status-circle"></span> <p>Busy</p></li>
-						<li id="status-offline"><span class="status-circle"></span> <p>Offline</p></li>
-					</ul>
-				</div>
-				<div id="expanded">
-					<label for="twitter"><i class="fa fa-facebook fa-fw" aria-hidden="true"></i></label>
-					<input name="twitter" type="text" value="mikeross" />
-					<label for="twitter"><i class="fa fa-twitter fa-fw" aria-hidden="true"></i></label>
-					<input name="twitter" type="text" value="ross81" />
-					<label for="twitter"><i class="fa fa-instagram fa-fw" aria-hidden="true"></i></label>
-					<input name="twitter" type="text" value="mike.ross" />
-				</div>
 			</div>
 		</div>
 
@@ -394,15 +377,6 @@
 		</div> -->
 	</div>
 	<div class="content">
-		<div class="contact-profile">
-			<img src="assets/img/user.png" alt="" />
-			<p>Admin</p>
-			<!-- <div class="social-media">
-				<i class="fa fa-facebook" aria-hidden="true"></i>
-				<i class="fa fa-twitter" aria-hidden="true"></i>
-				 <i class="fa fa-instagram" aria-hidden="true"></i>
-			</div> -->
-		</div>
 		<div class="messages">
 			<ul>
 				<li class="sent">
