--- a/client-order-details.html
+++ b/client-order-details.html
@@ -405,7 +405,7 @@
                           </div>
                         </td>
                         <td>
-                          <a data-toggle="tooltip" data-placement="top" data-original-title="Proceeded to Pay" class="fa fa-money edit edit-fa"></a>
+                          <a data-toggle="tooltip" data-placement="top" data-original-title="Proceeded to Pay" class="fa fa-money edit payment-fa"></a>
                         </td>
                       </tr>
                     </tr>
