--- a/client.html
+++ b/client.html
@@ -306,6 +306,9 @@
                             <a href="#">Client</a>
                         </li>
                     </ul>
+                    <!-- <div class="header-right">
+              <a type="submit" class="btn cust-btn">Previous Orders</a>
+            </div> -->
                 </div>
                 <!-- /Page Breadcrumb -->
 
