--- a/employee-index.html
+++ b/employee-index.html
@@ -376,6 +376,7 @@
                         <th>Assign Date</th>
                         <th>Job Title</th>
                         <th>Description</th>
+                        <th>Effort Hours</th>
                         <th>Status</th>
                         <th>Action</th>
                       </tr>
@@ -385,6 +386,7 @@
                         <td>05-03-18</td>
                         <td>Deep Employee Report</td>
                         <td>Public Information</td>
+                        <td>20</td>
                         <td><span class="red">Pending</span></td>
                         <td>
                           <a href="" data-toggle="tooltip" data-placement="top" data-original-title="Download" class="fa fa-download edit edit-fa"></a>
@@ -395,6 +397,7 @@
                         <td>11-03-18</td>
                         <td>Brand Endorsement Report</td>
                         <td>eCommerce</td>
+                        <td>32</td>
                         <td><span class="orange-span">Inprogress</span></td>
                         <td>
                           <a href="" data-toggle="tooltip" data-placement="top" data-original-title="Download" class="fa fa-download edit edit-fa"></a>
@@ -405,6 +408,7 @@
                         <td>22-03-18</td>
                         <td>Smith Employee Profile Report</td>
                         <td>Public Information</td>
+                        <td>40</td>
                         <td><span class="green">Completed</span></td>
                         <td>
                           <a href="" data-toggle="tooltip" data-placement="top" data-original-title="Download" class="fa fa-download edit edit-fa"></a>
