--- a/employee.html
+++ b/employee.html
@@ -321,13 +321,15 @@
                             Employee Information
                           </div>
                           <div class="table-responsive">
-                            <table class="table table-striped table-design last-child-one">
+                            <table class="table table-striped table-design last-child-two">
                               <thead>
                                 <tr>
                                   <th>Name</th>
                                   <th>Email</th>
                                   <th>Domain Expertise</th>
-                                  <th>Experience</th>
+                                  <th>Start Date</th>
+                                  <th>Shift</th>
+                                  <th>Telephone</th>
                                   <th>Status</th>
                                   <th>Action</th>
                                 </tr>
@@ -337,7 +339,9 @@
                                   <td>Jone Lee</td>
                                   <td>Jone.Lee@pir.com</td>
                                   <td>Homewares</td>
-                                  <td>2</td>
+                                  <td>05-03-18</td>
+                                  <td>Day Shift</td>
+                                  <td>(555) 555-1234</td>
                                   <td>
                                     <label class="switch-btn switch-flat">
                                     	<input class="switch-input" type="checkbox">
@@ -346,6 +350,7 @@
                                     </label>
                                   </td>
                                   <td class="text-center">
+                                    <a href="" data-toggle="tooltip" data-placement="top" data-original-title="Edit" class="fa fa-pencil-square-o edit edit-fa" aria-describedby="tooltip708883"></a>
                                       <a href="" data-toggle="tooltip" data-placement="top" data-original-title="Delete" class="fa fa-trash delete edit-fa"></a>
                                   </td>
                                 </tr>
@@ -353,7 +358,9 @@
                                   <td>James smith</td>
                                   <td>James.smith@pir.com</td>
                                   <td>Public Information</td>
-                                  <td>2</td>
+                                  <td>05-03-18</td>
+                                  <td>Night Shift</td>
+                                  <td>(555) 544-1234</td>
                                   <td>
                                     <label class="switch-btn switch-flat">
                                     	<input class="switch-input" type="checkbox">
@@ -362,6 +369,7 @@
                                     </label>
                                   </td>
                                   <td class="text-center">
+                                      <a href="" data-toggle="tooltip" data-placement="top" data-original-title="Edit" class="fa fa-pencil-square-o edit edit-fa" aria-describedby="tooltip708883"></a>
                                       <a href="" data-toggle="tooltip" data-placement="top" data-original-title="Delete" class="fa fa-trash delete edit-fa"></a>
                                   </td>
                                 </tr>
@@ -369,7 +377,9 @@
                                   <td>Strok poel</td>
                                   <td>Strok.poel@pir.com</td>
                                   <td>Financial & Banking</td>
-                                  <td>2</td>
+                                  <td>05-03-18</td>
+                                  <td>Day Shift</td>
+                                  <td>(555) 555-1854</td>
                                   <td>
                                     <label class="switch-btn switch-flat">
                                     	<input class="switch-input" type="checkbox">
@@ -378,6 +388,7 @@
                                     </label>
                                   </td>
                                   <td class="text-center">
+                                    <a href="" data-toggle="tooltip" data-placement="top" data-original-title="Edit" class="fa fa-pencil-square-o edit edit-fa" aria-describedby="tooltip708883"></a>
                                       <a href="" data-toggle="tooltip" data-placement="top" data-original-title="Delete" class="fa fa-trash delete edit-fa"></a>
                                   </td>
                                 </tr>
