--- a/index.html
+++ b/index.html
@@ -391,9 +391,10 @@
                           <thead>
                             <tr>
                               <th>Order Date</th>
-                              <th>Job Title</th>
-                              <th>Category</th>
+                              <th>Type</th>
+                              <th style="width:270px">Product Category</th>
                               <th>Acceptance</th>
+                              <th>Acceptance Date/Time </th>
                               <th>Assigned To</th>
                               <th>Status</th>
                               <th>Action</th>
@@ -402,9 +403,10 @@
                           <tbody>
                             <tr>
                               <td>05-03-18</td>
-                              <td>Deep Employee Report</td>
+                              <td>Foundation</td>
                               <td>Public Information</td>
                               <td class="green">Approved </td>
+                              <td>05-05-18 5:30 AM</td>
                               <td>James</td>
                               <td>
                                 <label class="switch-btn switch-flat">
@@ -421,9 +423,10 @@
                             </tr>
                             <tr>
                               <td>11-03-18</td>
-                              <td>Brand Endorsement Report</td>
+                              <td>Compliance</td>
                               <td>eCommerce</td>
                               <td class="red">Rejected</td>
+                              <td>-</td>
                               <td>-</td>
                               <td>
                                 <label class="switch-btn switch-flat">
@@ -440,9 +443,10 @@
                             </tr>
                             <tr>
                               <td>22-03-18</td>
-                              <td>Smith Employee Profile Report</td>
+                              <td>Custom</td>
                               <td>Public Information</td>
                               <td class="green">Approved</td>
+                              <td>05-05-18 5:30 AM</td>
                               <td>Riya</td>
                               <td>
                                 <label class="switch-btn switch-flat">
