--- a/profile.html
+++ b/profile.html
@@ -422,7 +422,7 @@
                                                           <div class="row">
                                                             <div class="col-sm-4">
                                                               <div class="form-group">
-                                                                <label class="control-label col-sm-5 lbl-pad-top" for="email">Locality:</label>
+                                                                <label class="control-label col-sm-5 lbl-pad-top" for="email">Address:</label>
                                                                 <div class="col-sm-7">
                                                                   <p class="form-control-static lbl-pad-top-btm">Third Street</p>
                                                                 </div>
@@ -500,7 +500,7 @@
                                                             </div>
                                                             <div class="col-sm-4">
                                                                 <div class="form-group">
-                                                                  <label for="inputsm">Locality</label>
+                                                                  <label for="inputsm">Address</label>
                                                                     <span class="input-icon icon-right">
                                                                         <input type="text" class="form-control">
                                                                     </span>
@@ -517,6 +517,14 @@
                                                             <div class="col-sm-4">
                                                                 <div class="form-group">
                                                                   <label for="inputsm">State</label>
+                                                                    <span class="input-icon icon-right">
+                                                                        <input type="text" class="form-control">
+                                                                    </span>
+                                                                </div>
+                                                            </div>
+                                                            <div class="col-sm-4">
+                                                                <div class="form-group">
+                                                                  <label for="inputsm">Profile Description</label>
                                                                     <span class="input-icon icon-right">
                                                                         <input type="text" class="form-control">
                                                                     </span>
