--- a/client-register.html
+++ b/client-register.html
@@ -41,34 +41,33 @@
 
       <div class="registerbox-caption ">Please fill in your information</div>
       <div class="registerbox-textbox">
-        <div class="row">
-          <div class="col-lg-6 col-sm-6 col-xs-12 padding-right-15">
-            <input type="text" class="form-control" placeholder="Name" />
-          </div>
-          <div class="col-lg-6 col-sm-6 col-xs-12 no-padding padding-right-15 mbl-pad-lft-15 mbl-mrg-top-10">
-            <input type="text" class="form-control" placeholder="Title" />
-          </div>
-        </div>
-      </div>
-      <div class="registerbox-textbox">
-        <input type="text" class="form-control" placeholder="Company" />
-      </div>
-
-      <div class="registerbox-textbox">
-        <input type="text" class="form-control" placeholder="Address" />
+        <input type="email" class="form-control" placeholder="Email Address" />
       </div>
       <div class="registerbox-textbox">
         <div class="row">
           <div class="col-lg-6 col-sm-6 col-xs-12 padding-right-15">
-            <input type="text" class="form-control" placeholder="Email Id" />
+            <input type="text" class="form-control" placeholder="First Name" />
           </div>
           <div class="col-lg-6 col-sm-6 col-xs-12 no-padding padding-right-15 mbl-pad-lft-15 mbl-mrg-top-10">
-            <input type="text" class="form-control" placeholder="Phone Number" />
+            <input type="text" class="form-control" placeholder="Last Name" />
           </div>
         </div>
       </div>
       <div class="registerbox-textbox">
-        <textarea class="form-control" rows="3" id="form-field-8" placeholder="Billing Address"></textarea>
+        <textarea class="form-control" rows="2" id="form-field-8" placeholder="Address"></textarea>
+      </div>
+      <div class="registerbox-textbox">
+        <div class="row">
+          <div class="col-lg-4 col-sm-4 col-xs-12 padding-right-15">
+            <input type="text" class="form-control" placeholder="City" />
+          </div>
+          <div class="col-lg-4 col-sm-4 col-xs-12 no-padding padding-right-15 mbl-pad-lft-15 mbl-mrg-top-10">
+            <input type="text" class="form-control" placeholder="State" />
+          </div>
+          <div class="col-lg-4 col-sm-4 col-xs-12 no-padding padding-right-15 mbl-pad-lft-15 mbl-mrg-top-10">
+            <input type="text" class="form-control" placeholder="Postal Code" />
+          </div>
+        </div>
       </div>
       <div class="form-group registerbox-textbox cust-form-group">
         <div >
@@ -85,6 +84,18 @@
           </select><i class="form-control-feedback" data-bv-field="country" style="display: none;"></i>
         </div>
       </div>
+      <div class="registerbox-textbox no-padding-bottom">
+        <div class="checkbox">
+          <label>
+            <input type="checkbox" class="colored-primary">
+            <span class="text white">If Billing Address is the same as Company Address</span>
+          </label>
+        </div>
+      </div>
+      <div class="registerbox-textbox">
+        <textarea class="form-control" rows="3" id="form-field-8" placeholder="Billing Address"></textarea>
+      </div>
+
 
       <!-- <div class="registerbox-textbox">
       <div class="row">
