--- a/forgotpassword.html
+++ b/forgotpassword.html
@@ -59,12 +59,12 @@
 
                   <div class="modal-header">
                       <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                      <h4 class="modal-title" id="mySmallModalLabel">Alert</h4>
+                      <h4 class="modal-title" id="mySmallModalLabel">Thank You!</h4>
                   </div>
                   <div class="modal-body">
                     <div class="row">
                       <div class="col-md-12">
-                        <p>Your password changed successfully..</p>
+                        <p>Your Password has been Successfully Changed.</p>
                         <div class="text-center">
                         <a href="login.html" class="btn cust-btn mrg-btm-10">Ok</a>
                       </div>
